vcs/specs/parser/fail/expressions/invalid_tuple_element.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, tuple, element, error
// @description: Malformed tuple element with missing expression
// @expected-error: E018

fn test() {
    let x = (1, , 3);  // Missing element between commas
    let y = (, 1, 2);  // Leading comma - missing first element
}
